--- a/Classification/Hotel_Booking/HB_model.ipynb
+++ b/Classification/Hotel_Booking/HB_model.ipynb
@@ -73,12 +73,12 @@
     "\n",
     "---\n",
     "\n",
-    "## **Exécutez le code suivant pour lire le fichier \"hotel_booking_data.ccsv\". N'hésitez pas à explorer un peu le fichier avant de continuer avec le reste du projet.**"
+    "## **Lecture du fichier \"Hotel_booking.csv\".**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "LX-nA6SjewZW"
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "id": "Z3gvT6d_ewZW"
    },
@@ -97,17 +97,13 @@
    "source": [
     "# LECTURE CSV à éxécuter\n",
     "\n",
-    "# lecture à partir de Github pour pouvoir éxécuter le notebook sans se soucier d'importer le fichier csv\n",
-    "url = 'Datasets/hotel_booking_data.csv'\n",
-    "hotels = pd.read_csv(url)\n",
-    "\n",
-    "# Sinon lecture classique en important sur Google Colab ou depuis le chemin exact\n",
-    "# hotels = pd.read_csv(\"hotel_booking_data.csv\")"
+    "file = 'Hotel_booking.csv'\n",
+    "hotels = pd.read_csv(file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -344,7 +340,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -441,36 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "id": "fNcgcvlCewZX"
-   },
-   "outputs": [],
-   "source": [
-    "# Code ici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 3,
-     "status": "ok",
-     "timestamp": 1625561957558,
-     "user": {
-      "displayName": "Rod Paris",
-      "photoUrl": "",
-      "userId": "10535238717210992784"
-     },
-     "user_tz": -120
-    },
-    "id": "xS84BNaXewZX",
-    "outputId": "2dd51df0-6a82-48c5-8ef6-83262e9e055b"
    },
    "outputs": [
     {
@@ -479,14 +449,15 @@
        "119390"
       ]
      },
-     "execution_count": 40,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(hotels)\n",
+    "# Il y a 119390 lignes "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -499,36 +470,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "id": "3rj3GQKgewZY"
-   },
-   "outputs": [],
-   "source": [
-    "# Code ici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 290,
-     "status": "ok",
-     "timestamp": 1625561960483,
-     "user": {
-      "displayName": "Rod Paris",
-      "photoUrl": "",
-      "userId": "10535238717210992784"
-     },
-     "user_tz": -120
-    },
-    "id": "axE7wISdewZY",
-    "outputId": "0ec296ac-d636-4f23-cbdf-58356071dc47"
    },
    "outputs": [
     {
@@ -573,46 +518,17 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 18,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 4,
-     "status": "ok",
-     "timestamp": 1625561962456,
-     "user": {
-      "displayName": "Rod Paris",
-      "photoUrl": "",
-      "userId": "10535238717210992784"
-     },
-     "user_tz": -120
-    },
-    "id": "rOAfAaT0ewZY",
-    "outputId": "70222ac9-30cf-48e6-bf12-39637ae5938c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Oui, il y a des données manquantes, la colonne company a le plus de données manquantes : 112593 points de données manquants.\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "hotels.isnull().sum()\n",
+    "#hotels.notnull().sum()\n",
+    "\n",
+    "# Oui, il y a des données manquantes, la colonne company a le plus de données manquantes : 112593 points de données manquants.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -637,13 +553,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "id": "nTtLyfWgewZY"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "hotels = hotels.drop('company',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 119390 entries, 0 to 119389\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   hotel                           119390 non-null  object \n",
+      " 1   is_canceled                     119390 non-null  int64  \n",
+      " 2   lead_time                       119390 non-null  int64  \n",
+      " 3   arrival_date_year               119390 non-null  int64  \n",
+      " 4   arrival_date_month              119390 non-null  object \n",
+      " 5   arrival_date_week_number        119390 non-null  int64  \n",
+      " 6   arrival_date_day_of_month       119390 non-null  int64  \n",
+      " 7   stays_in_weekend_nights         119390 non-null  int64  \n",
+      " 8   stays_in_week_nights            119390 non-null  int64  \n",
+      " 9   adults                          119390 non-null  int64  \n",
+      " 10  children                        119386 non-null  float64\n",
+      " 11  babies                          119390 non-null  int64  \n",
+      " 12  meal                            119390 non-null  object \n",
+      " 13  country                         118902 non-null  object \n",
+      " 14  market_segment                  119390 non-null  object \n",
+      " 15  distribution_channel            119390 non-null  object \n",
+      " 16  is_repeated_guest               119390 non-null  int64  \n",
+      " 17  previous_cancellations          119390 non-null  int64  \n",
+      " 18  previous_bookings_not_canceled  119390 non-null  int64  \n",
+      " 19  reserved_room_type              119390 non-null  object \n",
+      " 20  assigned_room_type              119390 non-null  object \n",
+      " 21  booking_changes                 119390 non-null  int64  \n",
+      " 22  deposit_type                    119390 non-null  object \n",
+      " 23  agent                           103050 non-null  float64\n",
+      " 24  days_in_waiting_list            119390 non-null  int64  \n",
+      " 25  customer_type                   119390 non-null  object \n",
+      " 26  adr                             119390 non-null  float64\n",
+      " 27  required_car_parking_spaces     119390 non-null  int64  \n",
+      " 28  total_of_special_requests       119390 non-null  int64  \n",
+      " 29  reservation_status              119390 non-null  object \n",
+      " 30  reservation_status_date         119390 non-null  object \n",
+      " 31  name                            119390 non-null  object \n",
+      " 32  email                           119390 non-null  object \n",
+      " 33  phone-number                    119390 non-null  object \n",
+      " 34  credit_card                     119390 non-null  object \n",
+      "dtypes: float64(3), int64(16), object(16)\n",
+      "memory usage: 31.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "hotels.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -656,58 +632,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "id": "Ndwq3lanewZZ"
-   },
-   "outputs": [],
-   "source": [
-    "# Code ici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 4,
-     "status": "ok",
-     "timestamp": 1625561967562,
-     "user": {
-      "displayName": "Rod Paris",
-      "photoUrl": "",
-      "userId": "10535238717210992784"
-     },
-     "user_tz": -120
-    },
-    "id": "mOcLIkBWewZZ",
-    "outputId": "95c780e6-4b7a-4523-bfc5-308c94c6bf9e",
-    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "country\n",
        "PRT    48590\n",
        "GBR    12129\n",
        "FRA    10415\n",
        "ESP     8568\n",
        "DEU     7287\n",
-       "Name: country, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 23,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Code ici\n",
+    "hotels['country'].value_counts().nlargest(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1764,7 +1715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
