--- a/Classification/Hotel_Booking/HB_model.ipynb
+++ b/Classification/Hotel_Booking/HB_model.ipynb
@@ -672,54 +672,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true,
     "id": "H-sKfAjTewZZ"
    },
-   "outputs": [],
-   "source": [
-    "# Code ici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 206,
-     "status": "ok",
-     "timestamp": 1625561971618,
-     "user": {
-      "displayName": "Rod Paris",
-      "photoUrl": "",
-      "userId": "10535238717210992784"
-     },
-     "user_tz": -120
-    },
-    "id": "k1AvBsmaewZZ",
-    "outputId": "c35aa88c-a7ea-4472-cd92-89842c5f4a33"
-   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "adr              5400\n",
-       "name    Daniel Walter\n",
-       "Name: 48515, dtype: object"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adr plus elevé = 5400.0\n",
+      "personne qui a payé ce tarif : Daniel Walter\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# Code ici\n",
+    "adr_max = hotels['adr'].max()\n",
+    "print(f'adr plus elevé = {adr_max}')\n",
+    "ind_adr = hotels['adr'].idxmax()\n",
+    "name_max = hotels.loc[ind_adr, 'name']\n",
+    "print(f'personne qui a payé ce tarif : {name_max}')\n",
+    "#\n",
+    "#hotels.loc[hotels['name'] == name_max]  #pour afficher tout la ligne correspondant à cette personne"
+   ]
   },
   {
    "cell_type": "markdown",
